adding first page

--- a/hulu.html
+++ b/hulu.html
@@ -35,8 +35,11 @@
 
 
     <div class="startpage">
+
+        <div class="login">LOG IN</div>
+
         <div class="main-container">
-            <div class="start-initial-text">TRY UP TO ONE MONTH FREE</div>
+            <div class="start-initial-text green">TRY UP TO ONE MONTH FREE</div>
             <div class="brand"></div>
 
             <div class="start-desc-text1">
@@ -49,7 +52,24 @@
 
             <div class="sign-desc">Free trial for new & eligible returning subscribers only.</div>
         </div>
-        <div class="get-bundle"></div>
+        <div class="get-bundle">
+            <div class="get-bundle--left">
+                <img src="images/logos.png">
+                <div class="get-bundle--left-text">
+                    <div class="green">BUNDLE WITH ANY HULU PLAN AND SAVE</div>
+                    Get Hulu, Disney+, and ESPN+
+                    <a href="#" target="_blank">Details</a>
+                </div>
+
+
+            </div>
+
+            <div class="get-bundle--right">
+                <div class="get-bundle--button">GET BUNDLE</div>
+                <a href="http://" target="_blank">Terms Apply</a>
+            </div>
+
+        </div>
     </div>
     <main>
         <section>
