--- a/hulu.html
+++ b/hulu.html
@@ -60,8 +60,6 @@
                     Get Hulu, Disney+, and ESPN+
                     <a href="#" target="_blank">Details</a>
                 </div>
-
-
             </div>
 
             <div class="get-bundle--right">
@@ -73,7 +71,7 @@
     </div>
     <main>
         <section>
-
+            need to do!
         </section>
     </main>
 </body>
