--- a/hulu.html
+++ b/hulu.html
@@ -11,27 +11,6 @@
 </head>
 
 <body>
-    <!-- Body
-    FONT FAMILY    Rubik, sans-serif
-    FONT SIZE    16px
-    FONT STYLE    normal
-    FONT HEIGHT    27.2px
-    COLOR    #ffffff 
-
-
-    Header 3
-    FONT FAMILY
-    Rubik, sans-serif
-    FONT SIZE    26px
-    FONT STYLE    normal
-    FONT HEIGHT    44.2px
-    COLOR    #ffffff
-
-    Header 4
-    FONT FAMILY    Rubik, sans-serif
-    FONT SIZE    13px
-    FONT STYLE    normal
-    FONT HEIGHT    22.1px-->
 
 
     <div class="startpage">
@@ -70,10 +49,164 @@
         </div>
     </div>
     <main>
-        <section>
-            need to do!
+        <section class="p2">
+            <div class="page-2">
+                <div class="green">INCLUDED IN ALL PLANS
+                </div>
+                <div class="page-2-head">
+                    All The TV You Love
+                </div>
+
+                <div class="page-2-text">
+                    Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu Originals, kids
+                    shows, and more.
+                </div>
+
+                <div class="cards">
+                    <div class="tv">
+                        <div class="card-normal">Past & Current Seasons</div>
+                        <div class="card-bold">TV Shows</div>
+                    </div>
+                    <div class="movies">
+                        <div class="card-normal">New & Classic</div>
+                        <div class="card-bold">Movies</div>
+                    </div>
+                    <div class="originals">
+                        <div class="card-normal">Groundbreaking</div>
+                        <div class="card-bold">HULU Originals</div>
+                    </div>
+                    <div class="premiums">
+                        <div class="card-normal">Add-On</div>
+                        <div class="card-bold">Premiums</div>
+                    </div>
+                </div>
+                <div class="cards-text">Premium network add-ons available for an additional cost</div>
+            </div>
+        </section>
+
+        <section class="p3">
+            <div class="page-3">
+                <div class="page-3-container">
+                    <div class="green">HULU+LIVE TV</div>
+                    <div class="page-3--head">
+                        Live TV Makes It Better
+                    </div>
+                    <div class="page-3--text-normal">Make The Switch From Cable.Get 75+ top channels with your favorite
+                        live sports, news and events - plus the entire Hulu streaming library</div>
+                    <div class="page-3--text-small">
+                        Live TV plan required.Regional Restrictions,blackouts and additional terms apply.See details
+                    </div>
+
+                    <a href="#">VIEW CHANNELS IN YOUR AREA →</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="p4">
+            <div class="page-4">
+                <div class="page-4--head">Live Sports</div>
+                <div class="page-4--text">
+                    Catch your games at home or on the go.Stream live games from major
+                    colleges and pro leagues including the NCAA, NBA, NHL, NFL, and more.
+                </div>
+                <div class="page-4-logos">
+                    <div class="logo" id="l1">
+                        <img src="images/logo-sports-logo-1.png">
+                    </div>
+                    <div class="logo" id="l2">
+                        <img src="images/logo-sports-logo-2.png">
+                    </div>
+                    <div class="logo" id="l3">
+                        <img src="images/logo-sports-logo-3.svg">
+                    </div>
+                    <div class="logo" id="l4">
+                        <img src="images/logo-sports-logo-4.png">
+                    </div>
+                </div>
+                <div class="page-3--text-small">
+                    Live TV plan required.Regional Restrictions,blackouts and additional terms apply.See details
+                </div>
+            </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <ul>
+                <li class="f-bold"> BROWSE
+                </li>
+                <li> Streaming Library
+                </li>
+                <li> Live TV
+                </li>
+                <li> Live News
+                </li>
+                <li> Live Sports
+                </li>
+            </ul>
+            <ul>
+                <li> TV Shows
+                </li>
+                <li> Movies
+                </li>
+                <li> Originals
+                </li>
+                <li> Networks
+                </li>
+                <li> Kids
+                </li>
+                <li> FX on Hulu
+                </li>
+            </ul>
+
+            <ul>
+                <li> HBO Max™
+                </li>
+                <li> Cinemax
+                </li>
+                <li> Showtime
+                </li>
+                <li> STARZ
+                </li>
+                <li> Hulu, Disney+, and ESPN+
+                </li>
+                <li> Disney bundle
+                </li>
+            </ul>
+            <ul>
+                <li class="f-bold">HELP</li>
+                <li> Account & Billing
+                </li>
+                <li> Plans & Pricing
+                </li>
+                <li> Supported Devices
+                </li>
+                <li> Accessibility
+                </li>
+            </ul>
+            <ul>
+                <li class="f-bold">ABOUT US</li>
+                <li>Press</li>
+                <li>Jobs</li>
+                <li>Contacts</li>
+            </ul>
+        </div>
+
+        <div class="handle-logos">
+            <div id="h-logo1">
+                <img src="images/facebook.svg">
+            </div>
+            <div id="h-logo2">
+                <img src="images/twitter.svg">
+            </div>
+            <div id="h-logo3">
+                <img src="images/youtube.svg">
+            </div>
+            <div id="h-logo4">
+                <img src="images/instagram.svg">
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
