--- a/hulu.html
+++ b/hulu.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hulu</title>
-    <link rel="stylesheet" href="styling.css">
+    <link rel="stylesheet" href="styling.css" class="desktop">
+    <link rel="stylesheet" href="mobile.css" class="mobile">
 </head>
 
 <body>
