all done... just need to debug

--- a/hulu.html
+++ b/hulu.html
@@ -53,7 +53,11 @@
 
             <div class="start-desc-text2">HBO Max™, SHOWTIME®, CINEMAX® and STARZ® available as add-ons.</div>
 
-            <div class="sign-but">START YOUR FREE TRIAL</div>
+            <div class="sign-but">
+                <a href="https://signup.hulu.com/plans" target="_blank" rel="noopener noreferrer">
+                    START YOUR FREE TRIAL
+                </a>
+            </div>
 
             <div class="sign-desc">Free trial for new & eligible returning subscribers only.</div>
         </div>
@@ -68,8 +72,10 @@
             </div>
 
             <div class="get-bundle--right">
-                <div class="get-bundle--button">GET BUNDLE</div>
-                <a href="http://" target="_blank">Terms Apply</a>
+                <div class="get-bundle--button">
+                    GET BUNDLE
+                </div>
+                <a href="#" target="_blank">Terms Apply</a>
             </div>
 
         </div>
@@ -219,16 +225,25 @@
 
         <div class="handle-logos">
             <div id="h-logo1">
-                <img src="images/facebook.svg">
+                <a href="https://www.facebook.com/hulu/" target="_blank">
+                    <img src="images/facebook.svg">
+                </a>
             </div>
             <div id="h-logo2">
-                <img src="images/twitter.svg">
+                <a href="https://twitter.com/hulu?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                    target="_blank">
+                    <img src="images/twitter.svg">
+                </a>
             </div>
             <div id="h-logo3">
-                <img src="images/youtube.svg">
+                <a href="https://www.youtube.com/c/hulu" target="_blank">
+                    <img src="images/youtube.svg">
+                </a>
             </div>
             <div id="h-logo4">
-                <img src="images/instagram.svg">
+                <a href="https://www.instagram.com/hulu/" target="_blank">
+                    <img src="images/instagram.svg">
+                </a>
             </div>
         </div>
     </footer>
